--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(lab_14 main.c
         libs/data_structures/vector/vector.c
-        libs/data_structures/vector/vector.h)
+        libs/data_structures/vector/vector.h
+        libs/data_structures/exceptions/exceptions.c
+        libs/data_structures/exceptions/exceptions.h)
 
 add_subdirectory(libs)
 target_link_libraries(lab_14 data_structures)
